<resources>
    <string name="app_name">CoApp</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="crash_toast_text">Ocorreu um erro e o app precisou ser fechado.</string>
    <string name="meet_ou_plans">Conheça nossos \nplanos</string>
    <string name="contact_us">Fale Conosco</string>
    <string name="sign_up">Faça seu \ncadastro</string>
    <string name="emergency_sheducling">Agenda \nEmergencial</string>
    <string name="sign_in">Entrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back">Voltar</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="facebook_sign_in">Entrar com \nFacebook</string>
    <string name="login_sucessful">Entrando...</string>
    <string name="auth_failed">Usuário ou senha inválidos</string>
    <string name="connection_failed">Ocorreu um erro de conexão.</string>

    <string name="facebook_app_id">225128488001850</string>
    <string name="fb_login_protocol_scheme">fb225128488001850</string>
    <string name="phone">Telefone</string>
    <string name="visit_web">Visitar o site</string>
    <string name="contact_means">Fale conosco</string>
    <string name="selected_destination">Selecione o destinatário</string>
    <string name="send">Enviar</string>
    <string name="call">Ligar</string>

    <string name="done">Adicionar</string>
    <string name="attachments_title_text" formatted="false">Anexos (%d/%d)</string>
    <string name="select_doc_text">Selecione um documento</string>
    <string name="no_files_found">Sem arquivos</string>
    <string name="plans">Planos</string>
    <string name="our_plans">Nossos Planos</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed lectus a metus porta tempus. Duis sem risus, ultrices quis mauris ut, hendrerit tincidunt sapien. In vitae venenatis augue. Aliquam tempor sem at dolor feugiat sollicitudin. Morbi quis ipsum id massa luctus pharetra. Fusce eget est tempus, consectetur dolor dictum, dapibus ante. Nam rhoncus, dui nec cursus dictum, nunc justo mollis nisl, accumsan porta magna urna in justo. Cras molestie eleifend risus, non consectetur lacus viverra at.  Donec et lacus et lorem cursus lacinia id sed eros. Morbi sit amet posuere nulla. Suspendisse posuere euismod magna a commodo. Ut ut tempus dolor, ac rhoncus nibh. Aenean facilisis lobortis tincidunt. Nullam blandit tristique sem, eu convallis metus. Aliquam sollicitudin lectus non ante pharetra varius. Curabitur vulputate, felis vitae blandit vehicula, eros purus sollicitudin lorem, ut gravida erat massa id metus. Aliquam eleifend, magna sit amet consequat egestas, diam dolor malesuada leo, et condimentum urna enim et leo. Quisque vel rutrum dolor. Vestibulum consequat, lacus vel dictum volutpat, nunc eros pharetra orci, id bibendum lectus orci sit amet nibh. Aliquam faucibus, purus quis bibendum pulvinar, odio quam fringilla metus, sed euismod purus tortor et lacus. Vestibulum eu est tempor, iaculis mauris nec, volutpat enim. Morbi eget eros mi. Donec congue massa vel justo facilisis congue.</string>
    <string name="cohabitat">Cohabitat</string>


</resources>
