<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifce.lds.coapp.login.views.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/contactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:text="@string/contact_us"
            android:textAppearance="@style/FontDroidSans"
            android:textColor="@color/white_text_button"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/cohabitat"
            android:textAppearance="@style/FontQuickSand"
            android:textColor="@color/plain_white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <ImageView
            android:id="@+id/circleImageView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/logo_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_edit_text_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:text="levi.m.albuquerque@gmail.com"
            android:textAppearance="@style/FontQuickSandBold"
            android:textColor="@color/plain_white"
            android:textColorHint="@color/faded_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edit_text_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="levi1110"
            android:textAppearance="@style/FontQuickSandBold"
            android:textColor="@color/plain_white"
            android:textColorHint="@color/faded_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:layout_weight=".5"
            android:background="@drawable/sign_in_button_background"
            android:text="@string/sign_in"
            android:textAppearance="@style/FontQuickSandBold"
            android:textColor="@color/plain_white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="33dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signIn">

            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="5dp"
                android:layout_weight=".5"
                android:background="@drawable/sign_up_button_background"
                android:text="@string/sign_up"
                android:textAppearance="@style/FontQuickSandBold"
                android:textColor="@color/plain_white"
                android:textSize="16sp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookSignIn"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="5dp"
                android:layout_weight=".5"
                android:background="@drawable/facebook_button_background"
                android:text="@string/facebook_sign_in"
                android:textAppearance="@style/FontQuickSandBold"
                android:textColor="@color/plain_white"
                android:textSize="16sp"
                facebook:login_text="@string/facebook_sign_in" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="57dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:text="@string/meet_ou_plans"
            android:textAppearance="@style/FontDroidSans"
            android:textColor="@color/white_text_button"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="64dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:text="@string/emergency_sheducling"
            android:textAppearance="@style/FontDroidSans"
            android:textColor="@color/white_text_button"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
