<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_button_white" />
    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/circleImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        tools:layout_editor_absoluteX="144dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_edit_text_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAppearance="@style/FontQuickSand"
        android:textColor="@color/plain_white"
        android:textColorHint="@color/faded_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        tools:layout_editor_absoluteX="8dp" />

    <EditText

        android:id="@+id/edtPassword"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_edit_text_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAppearance="@style/FontQuickSand"
        android:textColor="@color/plain_white"
        android:textColorHint="@color/faded_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/sign_in_button_background"
        android:text="@string/sign_in"
        android:textAppearance="@style/FontQuickSand"
        android:textColor="@color/plain_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:layout_editor_absoluteX="8dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookSignIn"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/facebook_button_background"
        android:drawableLeft="@null"
        android:drawableRight="@null"
        android:text="@string/facebook_sign_in"
        android:textAppearance="@style/FontQuickSand"
        android:textColor="@color/plain_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        facebook:login_text="@string/facebook_sign_in"
        tools:layout_editor_absoluteX="8dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />
</android.support.constraint.ConstraintLayout>
